[project]
name = "robotsuite"
version = "3.0.0"
description = "Robot Framework test suite for Python unittest framework"
readme = "README.rst"
authors = [
    {name = "Asko Soukka", email = "asko.soukka@iki.fi"},
]
urls = { "Repository" = "https://github.com/collective/robotsuite" }
license = {text="GPL-2.0-only"}
classifiers = [
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Programming Language :: Python :: 3",
]
requires-python = ">= 3.9"
dependencies =[
    "importlib-metadata",
    "lxml",
    "robotframework",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/robotsuite"]
exclude = ["tests"]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "zc-buildout>=4.1.12",
    "zest-releaser>=9.6.2",
]

[project.optional-dependencies]
test = []

rf304 = [ "robotframework==3.0.4" ]
rf312 = [ "robotframework==3.1.2" ]
rf322 = [ "robotframework==3.2.2" ]
rf403 = [ "robotframework==4.0.3" ]
rf413 = [ "robotframework==4.1.3" ]
rf501 = [ "robotframework==5.0.1" ]
rf602 = [ "robotframework==6.0.2" ]
rf611 = [ "robotframework==6.1.1" ]
rf701 = [ "robotframework==7.0.1" ]
rf711 = [ "robotframework==7.1.1" ]
rf722 = [ "robotframework==7.2.2" ]

[tool.uv]
conflicts = [
    [
      { extra = "rf304" },
      { extra = "rf312" },
      { extra = "rf322" },
      { extra = "rf403" },
      { extra = "rf413" },
      { extra = "rf501" },
      { extra = "rf602" },
      { extra = "rf611" },
      { extra = "rf701" },
      { extra = "rf711" },
      { extra = "rf722" },
    ],
]

[tool.isort]
force_alphabetical_sort_within_sections = true
force_single_line = true
from_first = true
line_length = 200
lines_after_imports = 2
lines_between_types = 0
no_sections = true
