[metadata]
name = robotsuite
version = 2.2.2.dev0
description = Robot Framework test suite for Python unittest framework
long_description = file: README.rst, CHANGES.txt
keywords = sphinx, extension, http, rest, documentation
author = Asko Soukka
author_email = asko.soukka@iki.fi
url = https://github.com/collective/robotsuite/
license = GPL version 2
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
setup_requires =
install_requires =
    six
    setuptools
    lxml
    robotframework>=2.8
tests_require =
package_dir =
    = src
packages = find:
namespace_packages =
zip_safe = False

[options.extras_require]
test =

[options.packages.find]
where =
    src

[check-manifest]
ignore =
    *.cfg
    .coveragerc
    .editorconfig
    .gitattributes

[aliases]
test = pytest

[flake8]
exclude = .git,__pycache__,build,dist
max-complexity = 20

[isort]
force_alphabetical_sort = True
force_single_line = True
lines_after_imports = 2
line_length = 200

[bdist_wheel]
universal = 1
